--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-  "enabledExchanges": ["variational","lighter", "binance", "grvt", "aster", "backpack", "hyperliquid", "paradex", "ethereal", "dydx"]
+  "enabledExchanges": ["variational","lighter", "binance", "grvt", "aster", "backpack", "hyperliquid", "paradex", "ethereal", "dydx", "nado"]
 }
